2008-11-07: 1.15.x
Fixed isCentroided if the center spectrum has only one peak
Added a slot "polarity" to xcmsRaw for mixed Polarity files

2008-11-05: 1.15.1
Fixed xcmsBoxPlot() behaviour, now obeying max_eics

2008-10-22: 1.15.0
Added unitTests

2008-10-20: 1.13.11
Herve Pages: fix global variable (typo) and Version bump

2008-10-02: 1.13.10
findPeaks.centWave: added check & warning for invalid scanrange parameter
sampnames<-(): fix for empty xcmsSet@phenoData
sampclass<-(): don't overwrite samplnames fixed

2008-09-22: 1.13.9
fixed documentation for findPeaks.MSW

2008-09-19: 1.13.8
findPeaks.MSW is compatible with patched versions of MassSpecWavelet  

2008-09-09: 1.13.7
xcms allocates a lot less memory when loaded
workaround for openSUSE 11.0 gcc compiler bug

2008-08-11: 1.13.6
Added calibrate() to xcmsSet, incl. vignette in xcmsDirect.pdf 
findPeaks.centWave: save some time: compute dppm only if needed

2008-07-15: 1.13.5
Parallel peak detection using Rmpi
Added mpi.finalize() via .Last
Changed plot.metlin so that x axes is the same on both plots
initialise variables gcc complained about
fix error in searchMetlin method.
xcmsRaw collect changes for simple-er code
added -DWIN32_LEAN_AND_MEAN to Makevars.win to fix ramp build on windows
Fix another windows build issue
Added findPeaksMPI() MPI slave function
moved Rgraphviz from required to suggested packages
Preparations for parallel peak picking using MPI, added xcmsPapply() function
removed duplicate definition of xcmsRaw.getsnScan
helper method added for xcmsRaw.collect
added helper method for collect
export new MS/MS searching methods
Added collect to xcmsRaw to convert to xcmsFragments, for searching
NB findPeaks method doesn't alway pick up all peaks that have ms^n data on them.
Ported phenoData code from 1.13.2
Added MS/MS searching methods. searchMetlin and similarity search methods for MS/MS data.